--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,9 @@
   <%= render PageComponent.new(title: t("devise.views.registrations.new.title")) do %>
     <%= render "devise/shared/oauth_links" %>
 
-    <% if params[:email].present? %>
-      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), class: "space-y-4" do |f| %>
+    <% if params[:via_email].present? || params.dig(:user, :via_email).present? %>
+      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), data: { turbo_frame: "_top" }, class: "space-y-4" do |f| %>
+        <%= f.hidden_field :via_email, value: params[:via_email] || params.dig(:user, :via_email) %>
         <%= render "shared/errors", object: resource %>
 
         <div class="space-y-1">
@@ -26,7 +27,7 @@
 
       <%= render "devise/shared/links" %>
     <% else %>
-      <%= link_to t("devise.views.sessions.new.sign_in_with_email"), new_session_path(resource_name, email: true), class: "du-btn du-btn-primary du-btn-block" %>
+      <%= link_to t("devise.views.sessions.new.sign_in_with_email"), new_user_registration_path(via_email: true), class: "du-btn du-btn-primary du-btn-block" %>
     <% end %>
   <% end %>
 <% end %>
