allow scrollable tables

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <%= render "shared/sidebar_2_cols" %>
     <% end %>
 
-    <div class="flex-grow flex flex-col bg-base-300">
+    <div class="flex-grow flex flex-col bg-base-300 min-w-0">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
         <div id="flash" class="absolute left-1/2 -translate-x-1/2 z-40 flex flex-col items-center">
