--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex justify-between px-4 py-2 bg-base-300">
+<nav class="flex justify-between px-4 lg:pl-0 py-2 bg-base-300">
   <%# left %>
   <div class="flex items-center gap-2">
     <% if signed_in? %>
@@ -17,7 +17,7 @@
       </button>
 
       <div>
-        <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "du-input gap-2 cursor-pointer lg:min-w-64" do %>
+        <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "du-input gap-2 cursor-pointer lg:min-w-64 rounded-lg" do %>
           <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4" %>
           <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
           <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
@@ -68,10 +68,7 @@
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
         </summary>
         <div class="absolute right-0 mt-5 bg-base-200 border border-base-content/20 z-1 rounded-lg p-1 space-y-1 du-menu">
-          <%= nav_link t("users.referrals.index.title"), user_referrals_path, icon: "👥" %>
-          <%= nav_link t("users.connected_accounts.index.title"), user_connected_accounts_path, icon: "🔗" if Devise.omniauth_configs.keys.any? %>
-          <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
-          <%= nav_link t("shared.navigation.logout"), destroy_user_session_path, icon: "👋", data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") } %>
+          <%= render "shared/user_links" %>
         </div>
       </details>
     <% else %>
