refine borders and paddings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <%= render "shared/flash" %>
         </div>
       </header>
-      <main class="flex-grow p-4 bg-base-100 overflow-y-auto lg:m-2 lg:mt-0 lg:ml-0 lg:rounded-lg lg:border border-base-content/20">
+      <main class="flex-grow p-4 bg-base-100 overflow-y-auto lg:m-2 lg:mt-0 lg:ml-0 lg:rounded-xl lg:border border-base-content/20">
         <%= yield %>
       </main>
       <%= render "shared/footer_nav" %>
