--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -4,7 +4,7 @@
 <aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative bg-base-300 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col flex-shrink-0">
   <%# Widescreen sidebar top %>
   <nav class="flex flex-row flex-grow h-full">
-    <div class="flex flex-col max-h-dvh overflow-y-auto p-2 pr-0">
+    <div class="flex flex-col max-h-dvh overflow-y-auto">
       <div class="flex flex-col space-y-2">
         <%= link_to root_path, class: "flex items-center justify-center aspect-square" do %>
           <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
@@ -26,13 +26,13 @@
           <% end %>
         </div>
       </div>
-      <div class="mt-auto pt-4">
+      <div class="mt-auto p-2">
         <%= render "shared/sidebar_toggle" %>
       </div>
     </div>
 
     <% if current_organization %>
-      <div class="bg-base-100 overflow-y-auto ml-0 m-2 rounded-lg border border-base-content/20 justify-between flex flex-col max-h-dvh">
+      <div class="bg-base-100 overflow-y-auto ml-0 m-2 rounded-xl border border-base-content/20 justify-between flex flex-col max-h-dvh">
         <div class="du-menu w-full">
           <%= nav_link current_organization.name, organization_path(current_organization), icon: organization_avatar(current_organization, classes: "size-5"), active: :exclusive %>
           <%= render "shared/sidebar_links" %>
@@ -48,7 +48,7 @@
     <% end %>
 
     <% if controller_path.start_with?('users') %>
-      <div class="bg-base-100 overflow-y-auto ml-0 m-2 rounded-lg border border-base-content/20 justify-between flex flex-col max-h-dvh">
+      <div class="bg-base-100 overflow-y-auto ml-0 m-2 rounded-xl border border-base-content/20 justify-between flex flex-col max-h-dvh">
         <div class="du-menu w-full">
           <%= render "shared/user_links" %>
         </div>
