dark:invert logos

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,8 +28,8 @@
     <% else %>
       <div>
         <%= link_to root_path, class: "no-underline" do %>
-          <%= image_tag "logo.png", class: "size-8 lg:hidden" %>
-          <%= image_tag "logo-long.png", class: "w-auto h-8 hidden lg:block" %>
+          <%= image_tag "logo.png", class: "size-8 lg:hidden dark:invert" %>
+          <%= image_tag "logo-long.png", class: "w-auto h-8 hidden lg:block dark:invert" %>
         <% end %>
       </div>
       <div class="du-menu du-menu-horizontal">
