--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -71,6 +71,12 @@
         </div>
       </details>
     <% else %>
+      <div class="inline-flex space-x-2">
+        <% I18n.available_locales.each do |locale| %>
+          <%= link_to locale_to_flag(locale), url_for(locale:), class: (locale == I18n.locale ? "underline" : "") %>
+        <% end %>
+      </div>
+
       <div class="du-menu du-menu-horizontal">
         <%= nav_link t("shared.navigation.login"), new_user_session_path, data: { turbo_frame: :modal } %>
         <%= nav_link t("shared.navigation.register"), new_user_registration_path, data: { turbo_frame: :modal } %>
