--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -9,39 +9,15 @@
   prefix: "du-";
 }
 
-/* Optional for custom themes – Docs: https://daisyui.com/docs/themes/#how-to-add-a-new-custom-theme */
-@plugin "./daisyui-theme.js"{
-  /* custom theme here */
+@plugin "daisyui";
+
+/* DaisyUI theme configuration */
+@plugin "daisyui/theme" {
+  name: "cupcake";
+  default: false;
+  prefersdark: false;
+  color-scheme: "light";
+  
+
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-
-  input:not([type='checkbox']):not([type='radio']):not([type='submit']) {
-    border-width: 1px;
-    border-color: var(--color-gray-200, currentColor);
-  }
-
-  button:not(:disabled),
-  input[type="submit"]:not(:disabled) {
-    cursor: pointer;
-  }
-}
-
-.form-input {
-  @apply block shadow-sm rounded-md border border-gray-400 outline-hidden px-3 py-2 mt-2 w-full;
-}
