--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t(".title") %>
 
 <div>
-  <h1 class="font-bold text-lx lg:text-3xll">Static#terms</h1>
+  <h1 class="font-bold text-xl lg:text-3xl">Static#terms</h1>
   <p>Find me in app/views/static/terms.html.erb</p>
 </div>
