--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -1,6 +1,6 @@
 <section class="space-y-4 mx-auto <%= width_class %>">
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-2xl lg:text-3xl">
+  <div class="flex justify-center items-center">
+    <h1 class="font-bold text-center text-gray-700 text-2xl lg:text-3xl">
       <%= title %>
     </h1>
     <div class="whitespace-nowrap">
