--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,24 +1,28 @@
-<%= form_with(model: organization, class: "contents space-y-4") do |form| %>
+<%= form_with(model: organization, class: "w-full") do |form| %>
   <%= render "shared/errors", object: form.object %>
 
-  <div class="">
-    <%= form.label :name %>
-    <%= form.text_field :name,
-                        class: "form-input",
-                        autocomplete: "off",
-                        autocorrect: "off",
-                        autocapitalize: "off",
-                        spellcheck: "false",
-                        autofocus: !turbo_native_app?,
-                        required: true %>
-  </div>
+  <div class="flex flex-col gap-6 w-full h-full">
+    <div class="field w-full">
+      <%= form.label :name, class: "font-medium text-sm text-graycolor-700 mb-1.5 block" %>
+      <%= form.text_field :name,
+          class: "w-full h-12 rounded-md px-3 border border-gray200 bg-white/50 focus:ring-2 focus:ring-rose-500/50 focus:border-rose-500 transition-all outline-none text-base placeholder:text-graycolor-400",
+          autocomplete: "off",
+          autocorrect: "off",
+          autocapitalize: "off",
+          spellcheck: "false",
+          autofocus: !turbo_native_app?,
+          required: true %>
+    </div>
 
-  <div class="">
-    <%= form.label :logo %>
-    <%= form.file_field :logo, accept: "image/png, image/jpeg, image/gif", class: "form-input" %>
-  </div>
+    <div class="field w-full">
+      <%= form.label :logo, class: "font-medium text-sm text-graycolor-700 mb-1.5 block" %>
+      <%= form.file_field :logo, 
+          accept: "image/png, image/jpeg, image/gif", 
+          class: "w-full h-12 rounded-md px-3 border border-gray200 bg-white/50 focus:ring-2 focus:ring-base-500/50 focus:border-base-500 transition-all outline-none text-base file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-primary-50 file:text-primary-700 hover:cursor-pointer" %>
+    </div>
 
-  <div class="inline">
-    <%= form.submit class: "du-btn du-btn-primary" %>
+    <div class="actions w-full h-fit bg-base-500 text-white py-2 rounded-lg mt-5 ">
+      <%= form.submit class: "cursor-pointer w-full bg-gradient-to-r from-gray800 to-rose-600 text-white py-4 rounded-xl font-bold hover:shadow-lg hover:shadow-rose-200/50 transition-all duration-300 hover:-trangray-y-0.5 text-base tracking-wide text-sm" %>
+    </div>
   </div>
 <% end %>
