--- a/app/views/organizations/access_request/invite_to_organizations/_invite_to_organization.html.erb
+++ b/app/views/organizations/access_request/invite_to_organizations/_invite_to_organization.html.erb
@@ -1,4 +1,4 @@
-<div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100">
+<div class="border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-primary/10">
   <div class="flex items-center gap-2">
     <%= "User email: #{invitation.user.email}" %>
     <br>
