--- a/app/views/organizations/projects/_project.html.erb
+++ b/app/views/organizations/projects/_project.html.erb
@@ -1,12 +1,18 @@
-<div id="<%= dom_id project %>">
-  <p class="">
-    <strong class="block font-medium mb-1">Name:</strong>
-    <%= project.name %>
-  </p>
-
-  <p class="">
-    <strong class="block font-medium mb-1">Organization:</strong>
-    <%= project.organization_id %>
-  </p>
-
+<div id="<%= dom_id project %>" class="bg-white rounded-xl border border-gray200/50 p-6 hover:shadow-lg transition-all duration-300 hover:-trangray-y-0.5">
+  <div class="flex flex-col h-full">
+    <div class="flex-1">
+      <h3 class="text-lg font-semibold text-graycolor-800 mb-2"><%= project.name %></h3>
+      <p class="text-sm text-graycolor-500">Organization ID: <%= project.organization_id %></p>
+    </div>
+    
+    <div class="mt-4 pt-4 border-t border-gray100">
+      <%= link_to [@organization, project], 
+          class: "inline-flex items-center gap-2 text-sm font-medium text-rose-600 hover:text-rose-700 transition-colors" do %>
+        <span>View details</span>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+        </svg>
+      <% end %>
+    </div>
+  </div>
 </div>
