--- a/app/views/organizations/projects/new.html.erb
+++ b/app/views/organizations/projects/new.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-lx lg:text-3xll">New project</h1>
+  <h1 class="font-bold text-xl lg:text-3xl">New project</h1>
 
   <%= render "form", project: @project %>
 
-  <%= link_to "Back to projects", [ @organization, :projects ], class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to projects", [ @organization, :projects ], class: "mt-5 ml-2 rounded-lg py-3 px-5 bg-primary/10 inline-block font-medium" %>
 </div>
