--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -1,40 +1,39 @@
 <%= render PageComponent.new(title: t(".title")) do %>
-	<div class="grid lg:grid-cols-2 gap-8">
+	<div class="grid lg:grid-cols-2 gap-8 ">
 		<% Rails.application.config_for(:settings)[:plans].each do |plan| %>
-			<div class="shadow border rounded-xl text-center flex flex-col">
-				<div class="leading-none grow">
-					<% if plan[:interval].to_s == "year" %>
-						<span class="inline-block bg-green-100 text-green-700 text-xs font-medium px-2.5 py-0.5 rounded-full mt-2">
-							<%= t(".save_yearly") %>
-						</span>
-					<% end %>
-				</div>
-
-				<div class="p-4 flex flex-row lg:flex-col gap-8 items-center justify-between">
-					<div class="inline-flex gap-0 items-baseline">
-						<span class="text-5xl font-medium">
-							<%= number_to_currency (plan[:unit_amount].to_f / 100), unit: currency_symbol(plan[:currency]), strip_insignificant_zeros: true %>
-						</span>
-
-						<span class="text-2xl whitespace-nowrap">
-							/<%= plan[:interval] %>
-						</span>
+			<div class=" flex flex-col items-center w-full h-fit rounded-xl p-8 bg-primary-50 outline outline-blue-200 transition-all duration-300 hover:shadow-xl hover:shadow-rose-500/5">
+				<div data-turbo="false" class="w-full">
+					<!-- Pricing Header -->
+					<div class="mb-8">
+						<% if plan[:interval].to_s == "year" %>
+						<span class="bg-base-500  rounded-full p-1 px-3 text-white absolute -top-3 right-[84px] text-center font-semibold uppercase tracking-wider text-xs">
+								<%= t(".save_yearly") %>
+							</span>
+						<% end %>
+						<div class="mt-4 flex items-baseline">
+							<span class="text-6xl font-bold text-graycolor-700">
+								<%= number_to_currency (plan[:unit_amount].to_f / 100), unit: currency_symbol(plan[:currency]), strip_insignificant_zeros: true %>
+							</span>
+							<span class="ml-1 text-graycolor-500 text-lg">/<%= plan[:interval] %></span>
+						</div>
 					</div>
 
-					<div class="">
+			
+
+					<!-- CTA Button -->
+					<div class="w-full text-graycolor-50">
 						<% if user_signed_in? && @organization.present? %>
 							<% if @organization.payment_processor.subscribed? %>
 								<% if plan_for(@organization.payment_processor.subscription)[:interval] == plan[:interval].to_s %>
-									<%= button_tag t(".current_plan"), class: "du-btn du-btn-secondary", disabled: true %>
+									<%= button_tag t(".current_plan"), class: "flex justify-center items-center w-full gap-2 px-3 py-3 mt-5 group rounded-md font-semibold bg-primary-600 hover:bg-primary-700 text-sm text-graycolor-50 transition-all", disabled: true %>
 								<% else %>
-									<%= button_to t(".manage_billing"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "du-btn du-btn-secondary" %>
+									<%= button_to t(".manage_billing"), organization_subscriptions_billing_portal_path(current_organization), data: { turbo: false }, class: "flex justify-center items-center w-full gap-2 px-3 py-3 mt-5 group rounded-md font-semibold bg-base-500-600 hover:bg-primary-700 text-sm text-graycolor-50 transition-all" %>
 								<% end %>
-
 							<% else %>
-								<%= link_to t(".subscribe"), organization_subscriptions_checkout_path(current_organization, price_id: plan[:id]), data: { turbo: false }, class: "du-btn du-btn-primary" %>
+								<%= link_to t(".subscribe"), organization_subscriptions_checkout_path(current_organization, price_id: plan[:id]), data: { turbo: false }, class: "flex justify-center items-center w-full gap-2 px-3 py-3 mt-5 group rounded-md font-semibold bg-primary-600 hover:bg-primary-700 text-sm text-graycolor-50 transition-all" %>
 							<% end %>
 						<% else %>
-							<%= link_to t(".subscribe"), new_user_registration_path, class: "du-btn du-btn-primary" %>
+							<%= link_to t(".subscribe"), new_user_registration_path, class: "flex justify-center items-center w-full gap-2 px-3 py-3 mt-5 group rounded-md font-semibold bg-primary-600 hover:bg-primary-700 text-sm text-graycolor-50 transition-all" %>
 						<% end %>
 					</div>
 				</div>
@@ -42,7 +41,9 @@
 		<% end %>
 	</div>
 
-	<div class="text-center text-gray-400 font-medium text-sm">
+	<div class="text-center text-primary/60 font-medium text-sm">
 		<%= t(".cancel_security") %>
 	</div>
 <% end %>
+
+<!-- Divider -->
