--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,17 +1,17 @@
 <%# Mobile sidebar backdrop %>
-<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
+<div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-primary/80 z-40 " data-action="click->mobile-sidebar#close"></div>
 
 <%# Sidebar content %>
-<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r w-52 bg-base-200 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative border-r w-52 bg-base-200 h-dvh -trangray-x-full lg:trangray-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
   <div class="flex-1">
     <details class="group">
       <summary class="btn-transparent font-medium text-sm p-2 pl-4 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-base-300">
         <% if current_organization %>
-        <div class="inline-flex items-center gap-2 max-w-40">
-          <div>
+        <div class="inline-flex items-center gap-2 max-w-40 *:select-none">
+          <div class="*:select-none">
             <%= organization_avatar(current_organization, classes: "size-5") %>
           </div>
-          <div class="truncate">
+          <div class="truncate *:select-none">
             <%= current_organization.name %>
           </div>
         </div>
@@ -22,7 +22,7 @@
         <% end %>
         <%= inline_svg_tag "svg/chevron-up-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200" %>
       </summary>
-      <div class="space-y-1 p-2 border-b">
+      <div class="space-y-1 p-2 border-b ">
         <% current_user.organizations.excluding(current_organization).each do |organization| %>
           <%= nav_link organization.name, organization_dashboard_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
         <% end %>
@@ -39,11 +39,11 @@
 
   <div class="border-t space-y-1 p-2">
     <% if current_organization %>
-      <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
-      <% if @current_membership.admin? %>
-        <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(current_organization), icon: subscription_status_label(current_organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
-        <%= nav_link t("organizations.show.title"), organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
-      <% end %>
+        <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(current_organization), icon: "svg/user-group.svg" %>
+        <% if @current_membership.admin? %>
+          <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(current_organization), icon: subscription_status_label(current_organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
+          <%= nav_link t("organizations.show.title"), organization_path(current_organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "edit", "show" ] ] %>
+        <% end %>
     <% end %>
     <%= render "shared/sidebar_toggle" %>
   </div>
