--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,7 @@
 <div>
-  <h1 class="font-bold text-lx lg:text-3xll">Static#index</h1>
+  <h1 class="font-bold text-xl lg:text-3xl">Static#index</h1>
   <p>Find me in app/views/static/index.html.erb</p>
+</div>
+<div class="">
+  Content
 </div>
