--- a/app/views/static/pricing.html.erb
+++ b/app/views/static/pricing.html.erb
@@ -1,3 +1,3 @@
-<% content_for :title, t(".title") %>
+<% content_for :title, t(".title"), class:"text-center text-red-500" %>
 
 <%= render "organizations/subscriptions/pricing" %>
