better org#show

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,6 +1,13 @@
 <% content_for :title, t("organizations.show.title") %>
 
-<%= render PageComponent.new(title: t("organizations.show.title"), full_width: true) do |component| %>
+<% title = capture do %>
+  <div class="flex items-center gap-2">
+    <%= organization_avatar(@organization) %>
+    <%= @organization.name %>
+  </div>
+<% end %>
+
+<%= render PageComponent.new(title:, full_width: false) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("shared.actions.edit"), edit_organization_path(@organization, drawer: true), data: { turbo_frame: :modal }, class: "du-btn du-btn-secondary du-btn-sm" if policy(@organization).edit? %>
     <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-error du-btn-sm" if @organization.can_transfer?(current_user) %>
@@ -8,4 +15,9 @@
       <%= button_to t("shared.actions.destroy"), @organization, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error du-btn-sm" if policy(@organization).destroy? %>
     </div>
   <% end %>
+
+  <div class="flex items-center gap-2">
+    <%= privacy_setting_icon(@organization.privacy_setting) %>
+    <%= render "organizations/users_list", organization: @organization %>
+  </div>
 <% end %>
