--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <%# left %>
   <div class="flex items-center gap-2">
     <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2">
-      <%= inline_svg_tag "svg/bars-3.svg", class: "size-6" %>
+      <%= inline_svg_tag "svg/sidebar-open.svg", class: "size-6" %>
       <% if current_organization %>
         <div class="inline-flex items-center gap-2 no-underline">
           <div>
