more responsive styling

--- a/app/components/tabs_component.html.erb
+++ b/app/components/tabs_component.html.erb
@@ -1,4 +1,4 @@
-<div class="border-b border-base-300 mb-6">
+<div class="border-b border-base-300 mb-6 overflow-x-auto">
   <nav class="flex space-x-4">
     <% tabs.each do |tab| %>
       <% if tab[:condition].nil? || tab[:condition] %>
