--- a/lib/templates/rails/credentials/credentials.yml.tt
+++ b/lib/templates/rails/credentials/credentials.yml.tt
@@ -18,3 +18,13 @@ stripe:
   webhook_receive_test_events: true
   signing_secret:
   - whsec_
+
+smtp:
+  user_name: ''
+  password: ''
+
+s3:
+  access_key_id: ''
+  secret_access_key: ''
+  region: ''
+  bucket: ''
